--- a/.eslintrc
+++ b/.eslintrc
@@ -57,6 +57,9 @@
   },
   "settings": {
     "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      },
       "typescript": {}
     }
   }
