--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-no-constructed-context-values": "off",
+    "no-console": "off",
     "jsx-a11y/label-has-associated-control": [
       "error",
       {
