--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "react-particles": "^2.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.2.4",
     "styled-components": "^5.3.5",
+    "tsparticles": "^2.2.4",
+    "tsparticles-slim": "^2.2.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
