--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
+    "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
@@ -20,8 +21,8 @@
     "react-particles": "^2.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.2.4",
     "react-toastify": "^9.0.8",
+    "react-tsparticles": "^2.2.4",
     "styled-components": "^5.3.5",
     "tsparticles": "^2.2.4",
     "tsparticles-slim": "^2.2.4",
