--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.13.1",
     "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
     "prism-react-renderer": "^1.3.5",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-particles": "^2.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
