--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/jsx-no-constructed-context-values": "off",
     "no-console": "off",
+    "no-nested-ternary": "off",
     "jsx-a11y/label-has-associated-control": [
       "error",
       {
