--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
+    "lottie-web": "^5.9.6",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "react-lottie": "^1.2.3",
     "react-particles": "^2.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -55,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lottie": "^1.2.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
