--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/react-modal": "^3.13.1",
+    "@uiw/react-textarea-code-editor": "^2.0.3",
     "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
     "prism-react-renderer": "^1.3.5",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
@@ -23,6 +25,7 @@
     "react-particles": "^2.2.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-code-editor": "^0.13.0",
     "react-toastify": "^9.0.8",
     "react-tsparticles": "^2.2.4",
     "styled-components": "^5.3.5",
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
