--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@uiw/react-textarea-code-editor": "^2.0.3",
     "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
+    "framer-motion": "4.1.17",
     "lottie-web": "^5.9.6",
     "prism-react-renderer": "^1.3.5",
     "prismjs": "^1.29.0",
