--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/react-modal": "^3.13.1",
+    "@types/uuid": "^8.3.4",
     "@uiw/react-textarea-code-editor": "^2.0.3",
     "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
@@ -35,6 +36,7 @@
     "tsparticles": "^2.2.4",
     "tsparticles-slim": "^2.2.4",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
