--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@uiw/react-textarea-code-editor": "^2.0.3",
     "axios": "^0.27.2",
     "eslint-config-airbnb": "^19.0.4",
-    "indent-string": "^5.0.0",
     "framer-motion": "4.1.17",
+    "indent-string": "^5.0.0",
     "lottie-web": "^5.9.6",
     "prism-react-renderer": "^1.3.5",
     "prismjs": "^1.29.0",
@@ -36,6 +36,7 @@
     "react-simple-code-editor": "^0.13.0",
     "react-toastify": "^9.0.8",
     "react-tsparticles": "^2.2.4",
+    "save": "^2.5.0",
     "styled-components": "^5.3.5",
     "tsparticles": "^2.2.4",
     "tsparticles-slim": "^2.2.4",
